# challenge4-data_sciencee

./: README.md  documentacao.docx  joker.py  main.ipynb  main.py  pyproject.toml
data/: README.md
utils/: helpers.py  old_main.ipynb
